# ember

./: .gitignore  CMakeLists.txt  LICENSE  imgui.ini
assets/meshes/: barrel.mtl  monkey.mtl
assets/shaders/: default.frag  default.vert  grid.frag  grid.vert
include/: cApp.h  cCamera.h  cFrameBuffer.h  cGameObject.h  cMesh.h  cTransform.h  utils.h
modules/glad/include/glad/: gl.h  glx.h
src/: cApp.cpp  cCamera.cpp  cFrameBuffer.cpp  cMesh.cpp  main.cpp  utils.cpp
